Fix footer gap

--- a/app/scss/shared.scss
+++ b/app/scss/shared.scss
@@ -679,7 +679,7 @@ button.cancel-button {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    column-gap: 1rem;
     background-color: var(--primary-background-color);
     padding: .3rem .6rem;
     border: 1px solid var(--primary-border-color);
